--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.vamsi.login">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.csproject.login">
 
     <application
         android:allowBackup="true"
@@ -8,7 +9,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:replace="android:appComponentFactory">
+        <activity
+            android:name=".Main2Activity"
+            android:label="@string/title_activity_main2"></activity>
         <activity
             android:name=".MainActivity"
             android:windowSoftInputMode="stateHidden">
@@ -22,7 +27,7 @@
             android:name=".RegisterActivity"
             android:label="Registration"
             android:windowSoftInputMode="stateHidden" />
-        <activity android:name=".LoginSucess"></activity>
+        <activity android:name=".LoginSucess" />
     </application>
 
 </manifest>
